fixes alignment users show

--- a/wdi-final-app/app/assets/stylesheets/team_users.scss
+++ b/wdi-final-app/app/assets/stylesheets/team_users.scss
@@ -23,3 +23,10 @@
 	list-style: none;
 	font-family: 'Quicksand', sans-serif;
 }
+
+#your-team-list li {
+	font-size: 1.2em;
+	text-align: center;
+	color: #008080;
+	margin-left: -1em;
+}
